--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ lolbo.egg-info
 *train-zs.csv
 finetuned_vae_ckpts/
 finetuned_vae_ckpts/*
+tdc_drd3_scores*
+*.pdbqt
+*.mol
+dockstring_play/
+dockstring_play/*
+*.pdb
+tutorial-env/
+tutorial-env/*
